--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,11 @@ knitr::opts_chunk$set(
 [![Codecov test coverage](https://codecov.io/gh/insightsengineering/pager/graph/badge.svg)](https://app.codecov.io/gh/insightsengineering/pager)
 <!-- badges: end -->
 
-The goal of pager is to ...
+The pager package makes it simple to save tables of class gtsummary, gt, and flextable as a Word document using a reference document.
+This is accomplished by creating the document via R markdown using the `reference_docx:` field.
+
+The package also supports lists of table objects.
+When a list is passed, a page break is placed between each table in the list.
 
 ## Installation
 
@@ -35,25 +39,33 @@ pak::pak("insightsengineering/pager")
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+To begin, let's create a summary table.
 
 ```{r example}
 library(pager)
-## basic example code
+
+# create table
+tbl <-
+  cards::ADAE[1:150,] |>
+  gtsummary::tbl_hierarchical(
+    variables = c(AESOC, AETERM),
+    by = TRTA,
+    denominator = cards::ADSL,
+    id = USUBJID,
+  )
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
+The code below will save the table as  Word document using the default portrait orientation reference document.
 
-```{r cars}
-summary(cars)
+```{r table}
+gtsummary::as_flex_table(tbl) |>
+  save_with_rmarkdown(path = tempfile(fileext = ".docx"))
 ```
 
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this.
+The example below first splits the summary table into a list of tables.
+Each table is saved to a separate page in the resulting Word document.
 
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
+```{r table-list}
+gtsummary::tbl_split_by_rows(tbl, row_numbers = seq(20, nrow(tbl), by = 20)) |>
+  save_with_rmarkdown(path = tempfile(fileext = ".docx"))
 ```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
